--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Asteris Apostolidis — Aviation, AI & Simulation</title>
-  <meta name="description" content="Asteris Apostolidis — research & innovation leader in aviation. AI, simulation, and data-driven maintenance." />
+  <meta name="description" content="Asteris Apostolidis — innovation & research leader in aviation. AI, simulation, and data-driven maintenance." />
   <meta name="robots" content="index,follow" />
+
+  <!-- Social -->
   <meta property="og:title" content="Asteris Apostolidis — Aviation, AI & Simulation" />
-  <meta property="og:description" content="Research & innovation leader in aviation — AI, simulation, PdM, trustworthy systems." />
+  <meta property="og:description" content="Strategy and systems for predictive maintenance, trustworthy AI, and digital twins." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://asteris.nl" />
   <meta property="og:image" content="./assets/headshot.jpg" />
-  <script type="application/ld+json">
-  {"@context":"https://schema.org","@type":"Person","name":"Asteris Apostolidis","image":"https://asteris.nl/assets/headshot.jpg","jobTitle":"Senior Lead, Technical Innovation & Emerging Technologies","affiliation":"KLM Royal Dutch Airlines","knowsAbout":["Aviation","Predictive Maintenance","Diagnostics and Prognostics","Gas Turbines","AI & Simulation","Digital Twins"],"url":"https://asteris.nl","email":"mailto:hello@asteris.nl","sameAs":["https://www.linkedin.com/in/asterisapostolidis/","https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en"]}
-  </script>
+
+  <link rel="preload" as="image" href="./assets/headshot.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
@@ -27,12 +28,10 @@
       <ul class="nav-list">
         <li><a href="#mission">Mission</a></li>
         <li><a href="#experience">Experience</a></li>
-        <li><a href="#leadership">Leadership</a></li>
         <li><a href="#programmes">Research</a></li>
         <li><a href="#publications">Publications</a></li>
         <li><a href="#talks">Talks</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#awards">Awards</a></li>
+        <li><a href="#photos">Selected Photos</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><button id="themeBtn" class="theme-btn" onclick="toggleTheme()" aria-label="Toggle theme">🌓</button></li>
       </ul>
@@ -44,10 +43,9 @@
       <div class="hero-inner">
         <img class="headshot" src="./assets/headshot.jpg" alt="Asteris Apostolidis portrait" />
         <h1>Asteris Apostolidis</h1>
-        <p class="kicker">Aviation • AI & Simulation • Reliability</p>
+        <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
         <div class="cta-row">
           <a class="btn" href="#projects">See focus areas</a>
-          <a class="btn ghost" href="./cv/Asteris-Apostolidis-CV.docx">Download CV</a>
           <a class="btn ghost" href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">LinkedIn</a>
         </div>
       </div>
@@ -120,18 +118,6 @@
       <p class="muted small">See full details in the downloadable CV.</p>
     </section>
 
-    <section id="leadership" class="section">
-      <h2>Leadership & Committees</h2>
-      <ul class="list">
-        <li>Member, EASA Rulemaking Committee on Trustworthy AI (RMT.0742).</li>
-        <li>Chair, Aircraft Operational Data Working Group, IDCA — Prognostics & Diagnostics framework.</li>
-        <li>Independent Expert in New & Emerging Technologies, EASA.</li>
-        <li>External Expert, European Commission (proposal evaluations, monitoring, policy design).</li>
-        <li>Former Co-chair, SAE G-34 / EUROCAE WG-114 (Data Management & Validation; ML Design & Verification).</li>
-        <li>Technical Advisory roles (HECARRUS Clean Sky 2; others).</li>
-      </ul>
-    </section>
-
     <section id="programmes" class="section">
       <h2>Academic & Industrial Research Programmes</h2>
       <ul class="list">
@@ -163,6 +149,12 @@
       <p class="muted small">Full list available in the CV.</p>
     </section>
 
+    <section id="photos" class="section">
+      <h2>Selected Photos</h2>
+      <div id="gallery" class="gallery"></div>
+      <p class="muted small">Add JPG/PNG images to <code>/photos</code> and list them in <code>photos/photos.json</code> with fields: <code>src</code>, <code>alt</code>, optional <code>caption</code>, and <code>year</code>.</p>
+    </section>
+
     <section id="education" class="section">
       <h2>Education</h2>
       <ul class="list">
@@ -183,9 +175,8 @@
 
     <section id="contact" class="section">
       <h2>Contact</h2>
-      <p>For speaking, advisory, or collaboration:</p>
+      <p>Find me on:</p>
       <div class="links">
-        <a href="mailto:hello@asteris.nl">hello@asteris.nl</a>
         <a href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">LinkedIn</a>
         <a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
       </div>
