--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Asteris Apostolidis — Aviation, AI & Simulation</title>
+  <title>Dr Asteris Apostolidis — Aviation, AI & Simulation</title>
   <meta name="description" content="Asteris Apostolidis — innovation & research leader in aviation. AI, simulation, and data-driven maintenance." />
   <meta name="robots" content="index,follow" />
 
