--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="hero">
       <div class="hero-inner">
         <img class="headshot" src="./assets/headshot.jpg" alt="Asteris Apostolidis portrait" />
-        <h1>Asteris Apostolidis</h1>
+        <h1>Dr Asteris Apostolidis</h1>
         <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
         <div class="cta-row">
           <a class="btn" href="#projects">See focus areas</a>
