--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dr Asteris Apostolidis — Aviation, AI & Simulation</title>
-  <meta name="description" content="Asteris Apostolidis — innovation & research leader in aviation. AI, simulation, and data-driven maintenance." />
+  <meta name="description" content="Dr Asteris Apostolidis — innovation & research leader in aviation. AI, simulation, and data-driven maintenance." />
   <meta name="robots" content="index,follow" />
-
-  <!-- Social -->
-  <meta property="og:title" content="Asteris Apostolidis — Aviation, AI & Simulation" />
+  <meta property="og:title" content="Dr Asteris Apostolidis — Aviation, AI & Simulation" />
   <meta property="og:description" content="Strategy and systems for predictive maintenance, trustworthy AI, and digital twins." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://asteris.nl" />
   <meta property="og:image" content="./assets/headshot.jpg" />
-
   <link rel="preload" as="image" href="./assets/headshot.jpg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +38,7 @@
   <main id="top">
     <section class="hero">
       <div class="hero-inner">
-        <img class="headshot" src="./assets/headshot.jpg" alt="Asteris Apostolidis portrait" />
+        <img class="headshot" src="./assets/headshot.jpg" alt="Portrait of Dr Asteris Apostolidis" />
         <h1>Dr Asteris Apostolidis</h1>
         <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
         <div class="cta-row">
@@ -115,7 +112,6 @@
           </ul>
         </div>
       </div>
-      <p class="muted small">See full details in the downloadable CV.</p>
     </section>
 
     <section id="programmes" class="section">
@@ -146,13 +142,11 @@
         <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024).</li>
         <li>Keynote: “Digital Twins for Predictive Airline and Maintenance Operations”, ISATECH (2024).</li>
       </ul>
-      <p class="muted small">Full list available in the CV.</p>
     </section>
 
     <section id="photos" class="section">
       <h2>Selected Photos</h2>
       <div id="gallery" class="gallery"></div>
-      <p class="muted small">Add JPG/PNG images to <code>/photos</code> and list them in <code>photos/photos.json</code> with fields: <code>src</code>, <code>alt</code>, optional <code>caption</code>, and <code>year</code>.</p>
     </section>
 
     <section id="education" class="section">
@@ -184,7 +178,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> Asteris Apostolidis. All rights reserved.</p>
+    <p>© <span id="year"></span> Dr Asteris Apostolidis. All rights reserved.</p>
   </footer>
 
   <script src="./script.js"></script>
