--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         My professional interests lie at the interface of technology, aviation, strategy, and sustainability. I have a broad technical, managerial, and research experience, having worked for airlines, academic institutes, and aerospace manufacturers. I have dealt with the technical and strategic problematics of the design, simulation, operation, and maintenance of aircraft systems and simulation of aviation processes, having led numerous projects and research initiatives. I lead the Working Group on Diagnostics and Prognostics of the Independent Data Consortium for Aviation (IDCA) and I serve on the Rulemaking Committee on Trustworthy AI for the European Union Aviation Safety Agency (EASA), next to several other appointments on Technical Advisory Boards and international Working Groups.
       </p>
       <ul class="bullets">
-        <li>Focus: data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.</li>
-        <li>Current roles: Senior Lead Technical Innovation (KLM, BlueLabs); Senior Research Associate (AUAS).</li>
+        <li><b>Focus</b>b> data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.</li>
+        <li><b>Current roles</b>b> Senior Lead Technical Innovation (KLM, BlueLabs); Senior Research Associate (AUAS).</li>
       </ul>
     </section>
 
