--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <section id="projects" class="section">
       <h2>Focus Areas</h2>
       <div class="cards">
-        <article class="card"><h3>Predictive & Condition-Based Maintenance</h3><p>End-to-end pipelines for monitoring, RUL estimation, and workscoping that reduce downtime and improve sustainability.</p></article>
-        <article class="card"><h3>Digital Twins & Simulation</h3><p>From asset models to airport/airline operations simulation for decision support and scenario testing.</p></article>
-        <article class="card"><h3>Trustworthy AI</h3><p>Methods and governance for explainability, verification/validation, and safety in aviation AI applications.</p></article>
-        <article class="card"><h3>Data Exchange in Aviation</h3><p>Standards and platforms enabling secure diagnostic/prognostic data sharing across the ecosystem.</p></article>
+        <article class="card"><h3>Digital Twins & Simulation</h3><p>From asset models to airport / airline operations simulation for decision support and scenario testing.</p></article>
+        <article class="card"><h3>Trustworthy AI</h3><p>Methods and governance for explainability, verification / validation, and safety in aviation AI applications.</p></article>
+        <article class="card"><h3>Data Exchange in Aviation</h3><p>Standards and platforms enabling secure diagnostic / prognostic data sharing across the ecosystem.</p></article>
+        <article class="card"><h3>Predictive & Condition-Based Maintenance</h3><p>End-to-end pipelines for monitoring, RUL estimation, and workscoping that reduce downtime.</p></article>
       </div>
     </section>
 
@@ -73,7 +73,8 @@
       <h2>Professional Experience</h2>
       <div class="timeline">
         <div class="item">
-          <h3>KLM Royal Dutch Airlines — Senior Lead, Technical Innovation & Emerging Technologies <span class="muted">(05/2023–present, Amsterdam)</span></h3>
+          <h3>KLM Royal Dutch Airlines — Senior Lead, Technical Innovation & Emerging Technologies</h3>
+          <h3><span class="muted">(05/2023–present, Amsterdam)</span></h3>
           <ul>
             <li>Lead the Fleet Lab and Emerging Technologies Lab within BlueLabs.</li>
             <li>Focus on simulations & digital twins, data exchange, AI for airline processes, autonomous ground/airport ops.</li>
