--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </p>
       <ul class="bullets">
         <li><b>Focus</b>b> data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.</li>
-        <li><b>Current roles</b>b> Senior Lead Technical Innovation (KLM, BlueLabs); Senior Research Associate (AUAS).</li>
+        <li><b>Current roles</b>b> Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Research Associate, ex-Associate Professor (AUAS).</li>
       </ul>
     </section>
 
@@ -78,14 +78,25 @@
           <ul>
             <li>Lead the Fleet Lab and Emerging Technologies Lab within BlueLabs.</li>
             <li>Focus on simulations & digital twins, data exchange, AI for airline processes, autonomous ground/airport ops.</li>
-            <li>Member of KLM’s AI Board.</li>
+            <a href="https://techdata.klm.com/en/our-work/blue-labs/" target="_blank" rel="noopener">BlueLabs</a>
           </ul>
         </div>
         <div class="item">
-          <h3>Amsterdam University of Applied Sciences — Senior Research Associate; formerly Associate Professor & Lead, Maintenance Lab <span class="muted">(06/2021–present)</span></h3>
+          <h3>EASA - European union Aviation Safety Agency — Independent Expert in New and Emerging technologies; </h3>
+          <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
             <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
             <li>Co-developed Bright Sky (R&D Mobility Sectors Scheme) and contribute to faculty strategy.</li>
+            <a href="https://research.hva.nl/en/persons/asteris-apostolidis" target="_blank" rel="noopener">Academic Research Profile (PURE)</a>
+          </ul>
+        </div>        
+        <div class="item">
+          <h3>Amsterdam University of Applied Sciences — Senior Research Associate; ex-Associate Professor & Lead, Maintenance Lab</h3>
+          <h3><span class="muted">(06/2021–present)</span></h3>
+          <ul>
+            <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
+            <li>Co-developed Bright Sky (R&D Mobility Sectors Scheme) and contribute to faculty strategy.</li>
+            <a href="https://research.hva.nl/en/persons/asteris-apostolidis" target="_blank" rel="noopener">Academic Research Profile (PURE)</a>
           </ul>
         </div>
         <div class="item">
