--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
           </ul>
         </div>
         <div class="item">
-          <h3>EASA - European union Aviation Safety Agency — Independent Expert in New and Emerging technologies; </h3>
+          <h3>EASA - European union Aviation Safety Agency — Independent Expert in New and Emerging technologies; Rulemaking Committee Member</h3>
           <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
-            <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
-            <li>Co-developed Bright Sky (R&D Mobility Sectors Scheme) and contribute to faculty strategy.</li>
-            <a href="https://research.hva.nl/en/persons/asteris-apostolidis" target="_blank" rel="noopener">Academic Research Profile (PURE)</a>
+            <li>Provision of technical expertise in the area of New and Emerging technologies.</li>
+            <li>The Rulemaking Committee(RMT).0742 oversees the development of the regulatory frameworkfor AI-based applications in aviation</li>
+            <a href=https://www.easa.europa.eu/en/document-library/terms-of-reference-and-rulemaking-group-compositions/tor-rmt0742" target="_blank" rel="noopener">EASA RMT.0742</a>
           </ul>
         </div>        
         <div class="item">
