--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         My professional interests lie at the interface of technology, aviation, strategy, and sustainability. I have a broad technical, managerial, and research experience, having worked for airlines, academic institutes, and aerospace manufacturers. I have dealt with the technical and strategic problematics of the design, simulation, operation, and maintenance of aircraft systems and simulation of aviation processes, having led numerous projects and research initiatives. I lead the Working Group on Diagnostics and Prognostics of the Independent Data Consortium for Aviation (IDCA) and I serve on the Rulemaking Committee on Trustworthy AI for the European Union Aviation Safety Agency (EASA), next to several other appointments on Technical Advisory Boards and international Working Groups.
       </p>
       <ul class="bullets">
-        <li><b>Focus</b>b> data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.</li>
-        <li><b>Current roles</b>b> Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Research Associate, ex-Associate Professor (AUAS).</li>
+        <b>Focus</b> data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.
+        <b>Current roles</b> Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Research Associate, ex-Associate Professor (AUAS).
       </ul>
     </section>
 
@@ -70,7 +70,7 @@
     </section>
 
     <section id="experience" class="section">
-      <h2>Professional Experience</h2>
+      <h2>Professional Experience (highlights)</h2>
       <div class="timeline">
         <div class="item">
           <h3>KLM Royal Dutch Airlines — Senior Lead, Technical Innovation & Emerging Technologies</h3>
@@ -100,25 +100,29 @@
           </ul>
         </div>
         <div class="item">
-          <h3>Air France–KLM Group — Technology Innovation Manager <span class="muted">(02/2019–05/2021)</span></h3>
+          <h3>Air France–KLM Group — Technology Innovation Manager</h3>
+          <h3><span class="muted">(02/2019–05/2021)</span></h3>
           <ul>
             <li>Innovation initiatives in AI for aviation, emerging tech, digital platform strategy, sustainability.</li>
           </ul>
         </div>
         <div class="item">
-          <h3>AFI KLM E&M — Senior Engineer, Aircraft Engine Analytics <span class="muted">(10/2017–02/2019)</span></h3>
+          <h3>AFI KLM E&M — Senior Engineer, Aircraft Engine Analytics</h3>
+          <h3><span class="muted">(10/2017–02/2019)</span></h3>
           <ul>
             <li>Launched data-driven predictive analytics capability for KLM Engine Services; roadmap and team guidance.</li>
           </ul>
         </div>
         <div class="item">
-          <h3>Safran Aircraft Engines / Airbus / Altran — Aerothermal Engineer <span class="muted">(2015–2017)</span></h3>
+          <h3>Safran Aircraft Engines / Airbus / Altran — Aerothermal Engineer</h3>
+          <h3><span class="muted">(2015–2017)</span></h3>
           <ul>
             <li>R&D modelling and simulation across Airbus programmes; turbofan performance and nacelle anti-icing modelling.</li>
           </ul>
         </div>
         <div class="item">
-          <h3>GIVE — Co-founder <span class="muted">(2016–present)</span></h3>
+          <h3>GIVE — Co-founder <span class="muted"></h3>
+          </h3>(2016–present)</span></h3>
           <ul>
             <li>R&D consultancy in BEV/FCEV systems, engineering analytics, and product development for industry clients.</li>
           </ul>
@@ -126,6 +130,15 @@
       </div>
     </section>
 
+    <section id="education" class="section">
+      <h2>Education</h2>
+      <ul class="list">
+        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li>
+        <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University.</li>
+        <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki.</li>
+      </ul>
+    </section>
+    
     <section id="programmes" class="section">
       <h2>Academic & Industrial Research Programmes</h2>
       <ul class="list">
@@ -161,14 +174,7 @@
       <div id="gallery" class="gallery"></div>
     </section>
 
-    <section id="education" class="section">
-      <h2>Education</h2>
-      <ul class="list">
-        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li>
-        <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University.</li>
-        <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki.</li>
-      </ul>
-    </section>
+
 
     <section id="awards" class="section">
       <h2>Awards & Distinctions</h2>
