--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       <h2>Professional Experience (highlights)</h2>
       <div class="timeline">
         <div class="item">
-          <h3>KLM Royal Dutch Airlines — Senior Lead, Technical Innovation & Emerging Technologies</h3>
+          <h3>KLM Royal Dutch Airlines</h3>
+          <h3>Senior Lead, Technical Innovation & Emerging Technologies</h3>
           <h3><span class="muted">(05/2023–present, Amsterdam)</span></h3>
           <ul>
             <li>Lead the Fleet Lab and Emerging Technologies Lab within BlueLabs.</li>
@@ -82,7 +83,8 @@
           </ul>
         </div>
         <div class="item">
-          <h3>EASA - European union Aviation Safety Agency — Independent Expert in New and Emerging technologies; Rulemaking Committee Member</h3>
+          <h3>EASA - European union Aviation Safety Agency</h3>
+          </h3>Independent Expert in New and Emerging technologies; Rulemaking Committee Member</h3>
           <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
             <li>Provision of technical expertise in the area of New and Emerging technologies.</li>
@@ -91,7 +93,8 @@
           </ul>
         </div>        
         <div class="item">
-          <h3>Amsterdam University of Applied Sciences — Senior Research Associate; ex-Associate Professor & Lead, Maintenance Lab</h3>
+          <h3>Amsterdam University of Applied Sciences</h3>
+          </h3>Senior Research Associate; ex-Associate Professor & Lead, Maintenance Lab</h3>
           <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
             <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
@@ -100,31 +103,35 @@
           </ul>
         </div>
         <div class="item">
-          <h3>Air France–KLM Group — Technology Innovation Manager</h3>
+          <h3>Air France–KLM Group</h3>
+          </h3>Strategy Technology Innovation Manager</h3>
           <h3><span class="muted">(02/2019–05/2021)</span></h3>
           <ul>
             <li>Innovation initiatives in AI for aviation, emerging tech, digital platform strategy, sustainability.</li>
           </ul>
         </div>
         <div class="item">
-          <h3>AFI KLM E&M — Senior Engineer, Aircraft Engine Analytics</h3>
+          <h3>AFI KLM Engineering & Maintenance</h3>
+          </h3>Senior Engineer, Aircraft Engine Analytics</h3>
           <h3><span class="muted">(10/2017–02/2019)</span></h3>
           <ul>
             <li>Launched data-driven predictive analytics capability for KLM Engine Services; roadmap and team guidance.</li>
           </ul>
         </div>
         <div class="item">
-          <h3>Safran Aircraft Engines / Airbus / Altran — Aerothermal Engineer</h3>
+          <h3>Safran Aircraft Engines / Airbus</h3>
+          </h3>Aerothermal Engineer</h3>
           <h3><span class="muted">(2015–2017)</span></h3>
           <ul>
             <li>R&D modelling and simulation across Airbus programmes; turbofan performance and nacelle anti-icing modelling.</li>
           </ul>
         </div>
         <div class="item">
-          <h3>GIVE — Co-founder <span class="muted"></h3>
-          </h3>(2016–present)</span></h3>
+          <h3>GIVE - Green innovation & Vehicle Engineering</h3>
+          </h3>Co-founder & Special Technical Advisor<span class="muted"></h3>
+          </h3>(2016–2021)</span></h3>
           <ul>
-            <li>R&D consultancy in BEV/FCEV systems, engineering analytics, and product development for industry clients.</li>
+            <li>R&D consultancy in BEV/FCEV systems, engineering analytics, and product development for globalindustry clients.</li>
           </ul>
         </div>
       </div>
@@ -133,7 +140,7 @@
     <section id="education" class="section">
       <h2>Education</h2>
       <ul class="list">
-        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li>
+        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li> <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository</a></p>
         <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University.</li>
         <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki.</li>
       </ul>
@@ -164,8 +171,12 @@
       <h2>Invited Talks (selected)</h2>
       <ul class="list">
         <li>Keynote: “Revolutionising aerospace with trustworthy AI”, China Aviation New Technology Forum (2025).</li>
-        <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024).</li>
-        <li>Keynote: “Digital Twins for Predictive Airline and Maintenance Operations”, ISATECH (2024).</li>
+        <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, (2024), USA.</li>li>
+        <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), NL.</li>
+        <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Sweden.</li>
+        <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
+ 
+        
       </ul>
     </section>
 
