--- a/index.html
+++ b/index.html
@@ -140,18 +140,19 @@
     <section id="education" class="section">
       <h2>Education</h2>
       <ul class="list">
-        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li> <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository</a></p>
+        <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li>
         <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University.</li>
         <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki.</li>
+        <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository</a></p>
       </ul>
     </section>
     
     <section id="programmes" class="section">
       <h2>Academic & Industrial Research Programmes</h2>
       <ul class="list">
-        <li><strong>Bright Sky</strong> — R&D Mobility Sectors Scheme at Schiphol (24M€): innovations in MRO, aircraft availability, security.</li>
-        <li><strong>CIMPLO</strong> — Cross-Industry Predictive Maintenance Optimization Platform (NWO Smart Industry 2016).</li>
-        <li><strong>Data Mining in MRO</strong> — NWO / SIA RAAK MKB (SME support for predictive maintenance in aviation).</li>
+        <li>Bright Sky — R&D Mobility Sectors Scheme at Schiphol (24M€): innovations in MRO, aircraft availability, security.</li>
+        <li>CIMPLO — Cross-Industry Predictive Maintenance Optimization Platform (NWO Smart Industry 2016).</li>
+        <li>Data Mining in MRO — NWO / SIA RAAK MKB (SME support for predictive maintenance in aviation).</li>
       </ul>
     </section>
 
@@ -171,12 +172,10 @@
       <h2>Invited Talks (selected)</h2>
       <ul class="list">
         <li>Keynote: “Revolutionising aerospace with trustworthy AI”, China Aviation New Technology Forum (2025).</li>
-        <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, (2024), USA.</li>li>
+        <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, (2024), USA.</li>
         <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), NL.</li>
         <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Sweden.</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
- 
-        
       </ul>
     </section>
 
