--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
       <div class="cards">
         <article class="card"><h3>Digital Twins & Simulation</h3><p>From asset models to airport / airline operations simulation for decision support and scenario testing.</p></article>
         <article class="card"><h3>Trustworthy AI</h3><p>Methods and governance for explainability, verification / validation, and safety in aviation AI applications.</p></article>
-        <article class="card"><h3>Data Exchange in Aviation</h3><p>Standards and platforms enabling secure diagnostic / prognostic data sharing across the ecosystem.</p></article>
         <article class="card"><h3>Predictive & Condition-Based Maintenance</h3><p>End-to-end pipelines for monitoring, RUL estimation, and workscoping that reduce downtime.</p></article>
       </div>
     </section>
@@ -84,7 +83,7 @@
         </div>
         <div class="item">
           <h3>EASA - European union Aviation Safety Agency</h3>
-          </h3>Independent Expert in New and Emerging technologies; Rulemaking Committee Member</h3>
+          <h3>Independent Expert in New and Emerging technologies; Rulemaking Committee Member</h3>
           <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
             <li>Provision of technical expertise in the area of New and Emerging technologies.</li>
@@ -94,7 +93,7 @@
         </div>        
         <div class="item">
           <h3>Amsterdam University of Applied Sciences</h3>
-          </h3>Senior Research Associate; ex-Associate Professor & Lead, Maintenance Lab</h3>
+          <h3>Senior Research Associate; ex-Associate Professor & Lead, Maintenance Lab</h3>
           <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
             <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
@@ -104,7 +103,7 @@
         </div>
         <div class="item">
           <h3>Air France–KLM Group</h3>
-          </h3>Strategy Technology Innovation Manager</h3>
+          <h3>Strategy Technology Innovation Manager</h3>
           <h3><span class="muted">(02/2019–05/2021)</span></h3>
           <ul>
             <li>Innovation initiatives in AI for aviation, emerging tech, digital platform strategy, sustainability.</li>
@@ -112,7 +111,7 @@
         </div>
         <div class="item">
           <h3>AFI KLM Engineering & Maintenance</h3>
-          </h3>Senior Engineer, Aircraft Engine Analytics</h3>
+          <h3>Senior Engineer, Aircraft Engine Analytics</h3>
           <h3><span class="muted">(10/2017–02/2019)</span></h3>
           <ul>
             <li>Launched data-driven predictive analytics capability for KLM Engine Services; roadmap and team guidance.</li>
@@ -120,7 +119,7 @@
         </div>
         <div class="item">
           <h3>Safran Aircraft Engines / Airbus</h3>
-          </h3>Aerothermal Engineer</h3>
+          <h3>Aerothermal Engineer</h3>
           <h3><span class="muted">(2015–2017)</span></h3>
           <ul>
             <li>R&D modelling and simulation across Airbus programmes; turbofan performance and nacelle anti-icing modelling.</li>
@@ -128,8 +127,8 @@
         </div>
         <div class="item">
           <h3>GIVE - Green innovation & Vehicle Engineering</h3>
-          </h3>Co-founder & Special Technical Advisor<span class="muted"></h3>
-          </h3>(2016–2021)</span></h3>
+          <h3>Co-founder & Special Technical Advisor<span class="muted"></h3>
+          <h3>(2016–2021)</span></h3>
           <ul>
             <li>R&D consultancy in BEV/FCEV systems, engineering analytics, and product development for globalindustry clients.</li>
           </ul>
@@ -162,7 +161,7 @@
     </section>
 
     <section id="publications" class="section">
-      <h2>Publications</h2>
+      <h2>Publications (selected)</h2>
       <p>Peer-reviewed papers, conference proceedings and book chapters on predictive maintenance, diagnostics & prognostics, trustworthy AI, and gas turbine modelling.</p>
       <p><a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">View full list on Google Scholar →</a></p>
       <h3>Selected</h3>
@@ -185,11 +184,11 @@
     </section>
 
     <section id="awards" class="section">
-      <h2>Awards & Distinctions</h2>
+      <h2>Awards & Distinctions (selected)</h2>
       <ul class="list">
-        <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
         <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce, and DLR programmes.</li>
-        <li>Best thesis supervision award (NLF), 2022.</li>
+        <li>Best thesis supervision award (NLF - National Aerospace Funds), 2022.</li>
+        <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
       </ul>
     </section>
 
