--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
         <div class="cta-row">
           <a class="btn" href="#projects">See focus areas</a>
+          <a class="btn ghost" href="./cv/Asteris-Apostolidis-CV.docx">Download CV</a>
+          <a class="btn ghost" href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">Download CV</a>
+          <a class="btn ghost" href="./cv/Asteris-Apostolidis-CV.docx">Download CV</a>
           <a class="btn ghost" href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">LinkedIn</a>
         </div>
       </div>
