--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         My professional interests lie at the interface of technology, aviation, strategy, and sustainability. I have a broad technical, managerial, and research experience, having worked for airlines, academic institutes, and aerospace manufacturers. I have dealt with the technical and strategic problematics of the design, simulation, operation, and maintenance of aircraft systems and simulation of aviation processes, having led numerous projects and research initiatives. I lead the Working Group on Diagnostics and Prognostics of the Independent Data Consortium for Aviation (IDCA) and I serve on the Rulemaking Committee on Trustworthy AI for the European Union Aviation Safety Agency (EASA), next to several other appointments on Technical Advisory Boards and international Working Groups.
       </p>
       <ul class="bullets">
-        <b>Focus</b> data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.
-        <b>Current roles</b> Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Research Associate, ex-Associate Professor (AUAS).
+        <b>Focus: data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.</b>
+        <b>Current roles: Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Research Associate, ex-Associate Professor (AUAS).</b>
       </ul>
     </section>
 
