--- a/index.html
+++ b/index.html
@@ -162,12 +162,11 @@
     <section id="publications" class="section">
       <h2>Publications (selected)</h2>
       <p>Peer-reviewed papers, conference proceedings and book chapters on predictive maintenance, diagnostics & prognostics, trustworthy AI, and gas turbine modelling.</p>
-      <p><a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">View full list on Google Scholar →</a></p>
-      <h3>Selected</h3>
       <ul class="list">
-        <li>“Towards Trustworthy Data-driven Gas Turbine Prognostics”, ICAS (2024).</li>
+        <li>"Electric Aircraft Operations: An Interisland Mobility Case Study" <em>Aerospace</em> (2024).</li>
         <li>“AI-Based Exhaust Gas Temperature Prediction for Trustworthy Safety-Critical Applications”, <em>Aerospace</em> (2022).</li>
-        <li>“Aviation Data Analytics in MRO Operations: Prospects and Pitfalls”, IEEE RAMS (2020).</li>
+        <li>“Aviation Data Analytics in MRO Operations: Prospects and Pitfalls” <em>IEEE RAMS</em> (2020).</li>
+        <p><a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">View full list on Google Scholar →</a></p>
       </ul>
     </section>
 
