--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </section>
 
     <section id="experience" class="section">
-      <h2>Professional Experience (highlights)</h2>
+      <h2>Professional & Advisory Experience (highlights)</h2>
       <div class="timeline">
         <div class="item">
           <h3>KLM Royal Dutch Airlines</h3>
