--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
           <ul>
             <li>Lead the Fleet Lab and Emerging Technologies Lab within BlueLabs.</li>
             <li>Focus on simulations & digital twins, data exchange, AI for airline processes, autonomous ground/airport ops.</li>
-            <a href="https://techdata.klm.com/en/our-work/blue-labs/" target="_blank" rel="noopener">BlueLabs</a>
+            <a href="https://techdata.klm.com/en/our-work/blue-labs/" target="_blank" rel="noopener">KLM BlueLabs</a>
           </ul>
         </div>
         <div class="item">
-          <h3>EASA - European union Aviation Safety Agency</h3>
+          <h3>EASA - European Union Aviation Safety Agency</h3>
           <h3>Independent Expert in New and Emerging technologies; Rulemaking Committee Member</h3>
           <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
