--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
         <div class="cta-row">
           <a class="btn" href="#projects">See focus areas</a>
-          <a class="btn ghost" href="./cv/CV_Asteris_Apostolidis_May25_long.pdf">Download CV</a>
           <a class="btn ghost" href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="btn ghost" href="./cv/CV_Asteris_Apostolidis_May25_long.pdf">Download CV</a>
         </div>
       </div>
     </section>
@@ -85,7 +85,7 @@
           <h3><span class="muted">(06/2021–present)</span></h3>
           <ul>
             <li>Provision of technical expertise in the area of New and Emerging technologies.</li>
-            <li>The Rulemaking Committee(RMT).0742 oversees the development of the regulatory frameworkfor AI-based applications in aviation</li>
+            <li>The Rulemaking Committee(RMT).0742 oversees the regulatory framework for AI-based applications in aviation.</li>
             <a href=https://www.easa.europa.eu/en/document-library/terms-of-reference-and-rulemaking-group-compositions/tor-rmt0742" target="_blank" rel="noopener">EASA RMT.0742</a>
           </ul>
         </div>        
