--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="item">
           <h3>GIVE - Green innovation & Vehicle Engineering</h3>
           <h3>Co-founder & Special Technical Advisor<span class="muted"></h3>
-          <h3>(2016–2021)</span></h3>
+          <h3><span class="muted">(2016–2011)</span></h3>
           <ul>
             <li>R&D consultancy in BEV/FCEV systems, engineering analytics, and product development for globalindustry clients.</li>
           </ul>
