--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="item">
           <h3>EASA - European Union Aviation Safety Agency</h3>
           <h3>Independent Expert in New and Emerging technologies; Rulemaking Committee Member</h3>
-          <h3><span class="muted">(06/2021–present)</span></h3>
+          <h3><span class="muted">(06/2021–present, Cologne)</span></h3>
           <ul>
             <li>Provision of technical expertise in the area of New and Emerging technologies.</li>
             <li>The Rulemaking Committee (RMT).0742 oversees the regulatory framework for AI-based applications in aviation.</li>
@@ -92,7 +92,7 @@
         <div class="item">
           <h3>Amsterdam University of Applied Sciences</h3>
           <h3>Senior Research Associate; ex-Associate Professor & Lead, Maintenance Lab</h3>
-          <h3><span class="muted">(06/2021–present)</span></h3>
+          <h3><span class="muted">(06/2021–present, Amsterdam)</span></h3>
           <ul>
             <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
             <li>Co-developed Bright Sky (R&D Mobility Sectors Scheme) and contribute to faculty strategy.</li>
@@ -102,15 +102,15 @@
         <div class="item">
           <h3>Air France–KLM Group</h3>
           <h3>Strategy Technology Innovation Manager</h3>
-          <h3><span class="muted">(02/2019–05/2021)</span></h3>
+          <h3><span class="muted">(02/2019–05/2021, Amsterdam/Paris)</span></h3>
           <ul>
             <li>Innovation initiatives in AI for aviation, emerging tech, digital platform strategy, sustainability.</li>
           </ul>
         </div>
         <div class="item">
-          <h3>AFI KLM Engineering & Maintenance</h3>
+          <h3>Air France Industries KLM Engineering & Maintenance</h3>
           <h3>Senior Engineer, Aircraft Engine Analytics</h3>
-          <h3><span class="muted">(10/2017–02/2019)</span></h3>
+          <h3><span class="muted">(10/2017–02/2019, Amsterdam)</span></h3>
           <ul>
             <li>Launched data-driven predictive analytics capability for KLM Engine Services; roadmap and team guidance.</li>
           </ul>
@@ -118,7 +118,7 @@
         <div class="item">
           <h3>Safran Aircraft Engines / Airbus</h3>
           <h3>Aerothermal Engineer</h3>
-          <h3><span class="muted">(2015–2017)</span></h3>
+          <h3><span class="muted">(04/2015–08/2017, Toulouse)</span></h3>
           <ul>
             <li>R&D modelling and simulation across Airbus programmes; turbofan performance and nacelle anti-icing modelling.</li>
           </ul>
@@ -126,7 +126,7 @@
         <div class="item">
           <h3>GIVE - Green innovation & Vehicle Engineering</h3>
           <h3>Co-founder & Special Technical Advisor<span class="muted"></h3>
-          <h3><span class="muted">(2016–2011)</span></h3>
+          <h3><span class="muted">(04/2016–12/2022, Athens)</span></h3>
           <ul>
             <li>R&D consultancy in BEV/FCEV systems, engineering analytics, and product development for globalindustry clients.</li>
           </ul>
