--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
       <p>
         My professional interests lie at the interface of technology, aviation, strategy, and sustainability. I have a broad technical, managerial, and research experience, having worked for airlines, academic institutes, and aerospace manufacturers. I have dealt with the technical and strategic problematics of the design, simulation, operation, and maintenance of aircraft systems and simulation of aviation processes, having led numerous projects and research initiatives. I lead the Working Group on Diagnostics and Prognostics of the Independent Data Consortium for Aviation (IDCA) and I serve on the Rulemaking Committee on Trustworthy AI for the European Union Aviation Safety Agency (EASA), next to several other appointments on Technical Advisory Boards and international Working Groups.
       </p>
-        <li><b>Focus: data-driven maintenance, digital twins, diagnostics & prognostics, trustworthy AI for safety-critical systems.</b></li>
+        <li><b>Focus: Simulation & Digital Twins, Diagnostics & Prognostics, Autonomy, Trustworthy AI for Safety-critical Systems.</b></li>
         <li><b>Current roles: Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Researcher, ex-Associate Professor (AUAS).</b></li>
     </section>
 
     <section id="projects" class="section">
       <h2>Focus Areas</h2>
       <div class="cards">
-        <article class="card"><h3>Digital Twins & Simulation</h3><p>From asset models to airport / airline operations simulation for decision support and scenario testing.</p></article>
-        <article class="card"><h3>Trustworthy AI</h3><p>Methods and governance for explainability, verification / validation, and safety in aviation AI applications.</p></article>
-        <article class="card"><h3>Predictive & Condition-Based Maintenance</h3><p>End-to-end pipelines for monitoring, RUL estimation, and workscoping that reduce downtime.</p></article>
+        <article class="card"><h3>Digital Twins & Simulation</h3><p>From asset models to airport/airline operations simulation for decision support and scenario testing.</p></article>
+        <article class="card"><h3>Trustworthy AI</h3><p>Methods and governance for explainability, verification/ validation, and safety in aviation AI applications.</p></article>
+        <article class="card"><h3>Predictive Maintenance & CBM</h3><p>End-to-end pipelines for monitoring, RUL estimation, and workscoping that reduce downtime.</p></article>
       </div>
     </section>
 
@@ -91,7 +91,7 @@
         </div>        
         <div class="item">
           <h3>Amsterdam University of Applied Sciences</h3>
-          <h3>Senior Research Associate; ex-Associate Professor & Lead, Maintenance Lab</h3>
+          <h3>Senior Research Associate; ex-Associate Professor & Lab Lead</h3>
           <h3><span class="muted">(06/2021–present, Amsterdam)</span></h3>
           <ul>
             <li>Lead industrial research and the Maintenance Lab; projects with AF-KLM, RNLAF, Tata Steel, MTU Aero Engines.</li>
