--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
     <section id="talks" class="section">
       <h2>Invited Talks (selected)</h2>
       <ul class="list">
-        <li>Keynote: “Revolutionising aerospace with trustworthy AI”, China Aviation New Technology Forum (2025).</li>
+        <li>Keynote: “Revolutionising aerospace with trustworthy AI”, China Aviation New Technology Forum (2025), China.</li>
         <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, (2024), USA.</li>
-        <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), NL.</li>
+        <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), the Netherlands.</li>
         <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Sweden.</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
       </ul>
