--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), the Netherlands.</li>
         <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Sweden.</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long.pdf" target="_blank" rel="noopener">View full list on CV</a></p>
       </ul>
     </section>
 
@@ -186,6 +187,7 @@
         <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce, and DLR programmes.</li>
         <li>Best thesis supervision award (NLF - National Aerospace Funds), 2022.</li>
         <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long.pdf" target="_blank" rel="noopener">View full list on CV</a></p>
       </ul>
     </section>
 
