--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
     
     <section id="programmes" class="section">
-      <h2>Academic & Industrial Research Programmes</h2>
+      <h2>Industrial & Academic Research Programmes</h2>
       <ul class="list">
         <li>Bright Sky — R&D Mobility Sectors Scheme at Schiphol (24M€): innovations in MRO, aircraft availability, security.</li>
         <li>CIMPLO — Cross-Industry Predictive Maintenance Optimization Platform (NWO Smart Industry 2016).</li>
