--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="./highlights/highlights.css" />
 </head>
 <body>
   <header class="site-header">
@@ -191,6 +192,11 @@
       </ul>
     </section>
 
+    
+    <section id="highlights" class="section">
+      <h2>Highlights</h2>
+      <div id="highlights-grid" class="highlights-grid" aria-live="polite"></div>
+    </section>
     <section id="contact" class="section">
       <h2>Contact</h2>
       <p>Find me on:</p>
@@ -206,5 +212,6 @@
   </footer>
 
   <script src="./script.js"></script>
+  <script src="./highlights/highlights.js"></script>
 </body>
 </html>
