--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </main>
 
   <footer class="site-footer">
-    <p>© <span id="year"></span> Dr Asteris Apostolidis. All rights reserved.</p>
+    <p>© <span id="year"></span> Asteris Apostolidis. All rights reserved.</p>
   </footer>
 
   <script src="./script.js"></script>
