--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         <li><b>Current roles: Senior Lead Technical Innovation (KLM Royal Dutch Airlines); Senior Researcher, ex-Associate Professor (AUAS).</b></li>
     </section>
 
+    <section class="section">
+      <img src="./assets/logos2bw.jpg" alt="Selected organisations and partners" loading="lazy" decoding="async">
+    </section>
+    
     <section id="projects" class="section">
       <h2>Focus Areas</h2>
       <div class="cards">
