--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <ul class="nav-list">
         <li><a href="#mission">Mission</a></li>
         <li><a href="#experience">Experience</a></li>
+        <li><a href="#education">Education</a></li>
         <li><a href="#programmes">Research</a></li>
         <li><a href="#publications">Publications</a></li>
         <li><a href="#talks">Talks</a></li>
@@ -54,7 +55,7 @@
     </section>
     
     <section id="mission" class="section">
-      <h2>Background & Mission</h2>
+      <h2>Who I am</h2>
       <p>
         My professional interests lie at the interface of technology, aviation, strategy, and sustainability. I have a broad technical, managerial, and research experience, having worked for airlines, academic institutes, and aerospace manufacturers. I have dealt with the technical and strategic problematics of the design, simulation, operation, and maintenance of aircraft systems and simulation of aviation processes, having led numerous projects and research initiatives. I lead the Working Group on Diagnostics and Prognostics of the Independent Data Consortium for Aviation (IDCA) and I serve on the Rulemaking Committee on Trustworthy AI for the European Union Aviation Safety Agency (EASA), next to several other appointments on Technical Advisory Boards and international Working Groups.
       </p>
@@ -77,7 +78,7 @@
     </section>
     
     <section id="experience" class="section">
-      <h2>Professional & Advisory Experience (highlights)</h2>
+      <h2>Professional & Advisory Experience</h2>
       <div class="timeline">
         <div class="item">
           <h3>KLM Royal Dutch Airlines</h3>
