--- a/index.html
+++ b/index.html
@@ -202,6 +202,31 @@
       </ul>
     </section>
 
+<section id="articles" class="section">
+  <h2>Articles</h2>
+
+  <div class="tiles">
+    <a class="tile" href="https://aerospaceamerica.aiaa.org/departments/decarbonizing-by-2050-optimists-pessimists-and-realists/" target="_blank" rel="noopener">
+      <img src="./assets/articles/AA.jpg" alt="Decarbonizing by 2050 — Aerospace America">
+      <div class="tile-body">
+        <h3>Decarbonizing by 2050: Optimists, Pessimists & Realists</h3>
+        <p>My perspective on aviation’s sustainability pathways in Aerospace America.</p>
+        <span class="tile-meta">Aerospace America</span>
+      </div>
+    </a>
+
+    <a class="tile" href="https://solarimpulse.com/news/towards-sustainable-air-travel-challenges-and-opportunities/" target="_blank" rel="noopener">
+      <img src="./assets/articles/SIF.jpg" alt="Towards Sustainable Air Travel">
+      <div class="tile-body">
+        <h3>Towards Sustainable Air Travel: Challenges and Opportunities</h3>
+        <p>My perspective on sustainable air travel for the Solar Impulse Foundation.</p>
+        <span class="tile-meta">Solar Impulse Foundation</span>
+      </div>
+    </a>
+  </div>
+</section>
+
+    
     <section id="contact" class="section">
       <h2>Contact</h2>
       <p>Find me on:</p>
