--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <section id="articles" class="section">
   <h2>Articles</h2>
 
-  <div class="tiles">
+  <div class="tiles tiles--two tiles--compact">
     <a class="tile" href="https://aerospaceamerica.aiaa.org/departments/decarbonizing-by-2050-optimists-pessimists-and-realists/" target="_blank" rel="noopener">
       <img src="./assets/articles/AA.jpg" alt="Decarbonizing by 2050 — Aerospace America">
       <div class="tile-body">
