--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <li><a href="#programmes">Research</a></li>
         <li><a href="#publications">Publications</a></li>
         <li><a href="#talks">Talks</a></li>
+        <li><a href="#articles">Articles</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><button id="themeBtn" class="theme-btn" onclick="toggleTheme()" aria-label="Toggle theme">🌓</button></li>
       </ul>
