--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
       <img src="./assets/articles/AA.jpg" alt="Decarbonizing by 2050 — Aerospace America">
       <div class="tile-body">
         <h3>Decarbonizing by 2050: Optimists, Pessimists & Realists</h3>
-<!--         <p>My perspective on aviation’s sustainability pathways in Aerospace America.</p>
-        <span class="tile-meta">Aerospace America</span> -->
+<!--         <p>My perspective on aviation’s sustainability pathways in Aerospace America.</p> -->
+        <span class="tile-meta">Aerospace America</span> 
       </div>
     </a>
 
@@ -220,8 +220,8 @@
       <img src="./assets/articles/SIF.jpg" alt="Towards Sustainable Air Travel">
       <div class="tile-body">
         <h3>Towards Sustainable Air Travel: Challenges and Opportunities</h3>
- <!--         <p>My perspective on sustainable air travel for the Solar Impulse Foundation.</p>
-        <span class="tile-meta">Solar Impulse Foundation</span> -->
+ <!--         <p>My perspective on sustainable air travel for the Solar Impulse Foundation.</p> -->
+        <span class="tile-meta">Solar Impulse Foundation</span> 
       </div>
     </a>
   </div>
