--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
     
     <section id="experience" class="section">
-      <h2>Professional & Advisory Experience</h2>
+      <h2>Current Professional & Advisory Experience</h2>
       <div class="timeline">
         <div class="item">
           <h3>KLM Royal Dutch Airlines</h3>
@@ -117,7 +117,8 @@
             <a href="https://research.hva.nl/en/persons/asteris-apostolidis" target="_blank" rel="noopener">Academic Research Profile (PURE)</a>
           </ul>
         </div>
-        <div class="item">
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full employment list on my CV →</a></p>
+<!--                 <div class="item">
           <h3>Air France–KLM Group</h3>
           <h3>Strategy Technology Innovation Manager</h3>
           <h3><span class="muted">(02/2019–05/2021, Amsterdam/Paris)</span></h3>
@@ -148,7 +149,7 @@
           <ul>
             <li>R&D consultancy in BEV/FCEV systems, engineering analytics, and product development for globalindustry clients.</li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -195,7 +196,7 @@
         <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), the Netherlands.</li>
         <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Sweden.</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
-        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full list on CV →</a></p>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full list on my CV →</a></p>
       </ul>
     </section>
 
@@ -205,12 +206,12 @@
         <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce, and DLR programmes.</li>
         <li>Best thesis supervision award (NLF - National Aerospace Funds), 2022.</li>
         <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
-        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full list on CV →</a></p>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full list on my CV →</a></p>
       </ul>
     </section>
 
 <section id="articles" class="section">
-  <h2>Articles</h2>
+  <h2>Selected Articles</h2>
 
   <div class="tiles tiles--two tiles--compact">
     <a class="tile" href="https://aerospaceamerica.aiaa.org/departments/decarbonizing-by-2050-optimists-pessimists-and-realists/" target="_blank" rel="noopener">
