--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
     
     <section id="experience" class="section">
-      <h2>Current Professional & Advisory Experience</h2>
+      <h2>Current Professional Appointments</h2>
       <div class="timeline">
         <div class="item">
           <h3>KLM Royal Dutch Airlines</h3>
