--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     </section>
 
     <section id="publications" class="section">
-      <h2>Publications (selected)</h2>
+      <h2>Selected Publications</h2>
       <p>Peer-reviewed papers, conference proceedings and book chapters on predictive maintenance, diagnostics & prognostics, trustworthy AI, and gas turbine modelling.</p>
       <ul class="list">
         <li>"Electric Aircraft Operations: An Interisland Mobility Case Study" <em>Aerospace</em> (2024).</li>
@@ -184,7 +184,7 @@
     </section>
 
     <section id="talks" class="section">
-      <h2>Invited Talks (selected)</h2>
+      <h2>Selected Invited Talks</h2>
       <ul class="list">
         <li>Keynote: “Revolutionising aerospace with trustworthy AI”, China Aviation New Technology Forum (2025), China.</li>
         <li>Invited Talk: "Towards Net-Zero Aviation with AI”, Georgia Institute of Technology, Atlanta, (2024), USA.</li>
@@ -196,7 +196,7 @@
     </section>
 
     <section id="awards" class="section">
-      <h2>Awards & Distinctions (selected)</h2>
+      <h2>Selected Awards & Distinctions</h2>
       <ul class="list">
         <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce, and DLR programmes.</li>
         <li>Best thesis supervision award (NLF - National Aerospace Funds), 2022.</li>
@@ -230,7 +230,7 @@
 </section>
 
     <section id="photos" class="section">
-      <h2>Selected Photos</h2>
+ <!--      <h2>Selected Photos</h2> -->
       <div id="gallery" class="gallery"></div>
     </section>
 
