--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
     <section id="programmes" class="section">
       <h2>Industrial & Academic Research Programmes</h2>
       <ul class="list">
-        <li>Bright Sky — R&D Mobility Sectors Scheme at Schiphol (24M€): innovations in MRO, aircraft availability, security.</li>
-        <li>CIMPLO — Cross-Industry Predictive Maintenance Optimization Platform (NWO Smart Industry 2016).</li>
-        <li>Data Mining in MRO — NWO / SIA RAAK MKB (SME support for predictive maintenance in aviation).</li>
+        <li>Bright Sky — Innovations in Predictive Maintenance, MRO, Security, Training (RVO R&D Mobility Fund).</li>
+        <li>CIMPLO — Cross-industry Predictive Maintenance & Dynamic scheduling platform (NWO Smart Industry).</li>
+        <li>Data Mining in MRO — Data Analytics & Predictive Maintenance in aviation MRO (NWO / SIA RAAK MKB).</li>
       </ul>
     </section>
 
