--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
       <h2>Contact</h2>
       <p>Find me on:</p>
       <div class="links">
+         <a>asterisa[at]gmail[dot]com</a>
         <a href="https://www.linkedin.com/in/asterisapostolidis/" target="_blank" rel="noopener">LinkedIn</a>
         <a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
       </div>
