--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <section id="projects" class="section">
       <h2>Focus Areas</h2>
       <div class="cards">
-        <article class="card"><h3>Digital Twins & Simulation</h3><p>From asset models to airport/airline operations simulation for decision support and scenario testing.</p></article>
+        <article class="card"><h3>Simulation & Digital Twins</h3><p>From asset models to airport/airline operations simulation for decision support and scenario testing.</p></article>
         <article class="card"><h3>Trustworthy AI</h3><p>Methods and governance for explainability, verification/ validation, and safety in aviation AI applications.</p></article>
         <article class="card"><h3>Predictive Maintenance & CBM</h3><p>End-to-end pipelines for monitoring, RUL estimation, and workscoping that reduce downtime.</p></article>
       </div>
