--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <main id="top">
     <section class="hero">
       <div class="hero-inner">
-        <img class="headshot" src="./assets/headshot.jpg" alt="Portrait of Dr Asteris Apostolidis" />
+        <img class="headshot" src="./assets/career-collage.jpg" alt="Portraits of Dr Asteris Apostolidis" />
         <h1>Dr Asteris Apostolidis</h1>
         <p class="kicker">Research &amp; Innovation • Aviation &amp; Aerospace • Tech &amp; AI</p>
         <div class="cta-row">
