--- a/index.html
+++ b/index.html
@@ -238,6 +238,25 @@
         <a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">Google Scholar</a>
       </div>
     </section>
+
+<section id="about" class="section about">
+  <div class="about-wrap">
+    <img class="about-photo" src="./assets/about.jpg"
+         alt="Portrait of Dr Asteris Apostolidis">
+    <div class="about-text">
+      <h2>About me</h2>
+      <p>
+        I was born and raised in Thessaloniki, Greece. Over the last sixteen years
+        I’ve lived in the United Kingdom, Belgium, France and the Netherlands.
+        Beyond aviation, I’m a lifelong photographer—from the darkroom era to digital—
+        drawn to landscapes, nature, aircraft, street scenes and the places I travel.
+        Music is my constant companion; I’ve collected records and other physical formats
+        for more than three decades. I live in Amsterdam with my spouse and our three children.
+      </p>
+    </div>
+  </div>
+</section>
+    
   </main>
 
   <footer class="site-footer">
