--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
         <li>Bright Sky — Innovations in Predictive Maintenance, MRO, Security, Training (RVO R&D Mobility Fund).</li>
         <li>CIMPLO — Cross-industry Predictive Maintenance & Dynamic scheduling platform (NWO Smart Industry).</li>
         <li>Data Mining in MRO — Data Analytics & Predictive Maintenance in aviation MRO (NWO / SIA RAAK MKB).</li>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View more details on my CV →</a></p>
       </ul>
     </section>
 
