--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <li>Bright Sky — Innovations in Predictive Maintenance, MRO, Security, Training (RVO R&D Mobility Fund).</li>
         <li>CIMPLO — Cross-industry Predictive Maintenance & Dynamic scheduling platform (NWO Smart Industry).</li>
         <li>Data Mining in MRO — Data Analytics & Predictive Maintenance in aviation MRO (NWO / SIA RAAK MKB).</li>
-        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View more details on my CV →</a></p>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full details in my CV →</a></p>
       </ul>
     </section>
 
@@ -181,7 +181,7 @@
         <li>"Electric Aircraft Operations: An Interisland Mobility Case Study" <em>Aerospace</em> (2024).</li>
         <li>“AI-Based Exhaust Gas Temperature Prediction for Trustworthy Safety-Critical Applications”, <em>Aerospace</em> (2022).</li>
         <li>“Aviation Data Analytics in MRO Operations: Prospects and Pitfalls” <em>IEEE RAMS</em> (2020).</li>
-        <p><a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">View full list on Google Scholar →</a></p>
+        <p><a href="https://scholar.google.com/citations?user=Ocz8SvgAAAAJ&hl=en" target="_blank" rel="noopener">See the full list in Google Scholar →</a></p>
       </ul>
     </section>
 
@@ -193,7 +193,7 @@
         <li>Panel: “Data synergy: unlocking aviation’s potential through collaboration”, World Aviation Festival (2024), the Netherlands.</li>
         <li>Invited Speaker, “Towards Sustainable, Data-driven Aircraft Maintenance“, Mälardalen University (2023), Sweden.</li>
         <li>Invited Lecture, “AI for Aviation MRO”, Responsible AI Series, IET/The Alan Turing Institute (2022), UK.</li>
-        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full list on my CV →</a></p>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
       </ul>
     </section>
 
@@ -203,7 +203,7 @@
         <li>Scholarships and sponsorships from Cranfield University, Rolls-Royce, and DLR programmes.</li>
         <li>Best thesis supervision award (NLF - National Aerospace Funds), 2022.</li>
         <li>Outstanding Contribution in Reviewing — Elsevier (2019).</li>
-        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">View full list on my CV →</a></p>
+        <p><a href="./cv/CV_Asteris_Apostolidis_May25_long_website.pdf" target="_blank" rel="noopener">See the full list in my CV →</a></p>
       </ul>
     </section>
 
