--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <li>PhD, Heat Transfer Modelling for Gas Turbine Performance Simulation — Cranfield University.</li>
         <li>MSc (Cum Laude), Thermal Power — Aerospace Propulsion — Cranfield University.</li>
         <li>Diploma, Mechanical Engineering (Energy & Aeronautics) — Aristotle University of Thessaloniki.</li>
-        <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository</a></p>
+        <p><a href="https://dspace.lib.cranfield.ac.uk/items/60955c90-1751-4adb-8e3b-9d91835a08e2" target="_blank" rel="noopener">PhD Thesis Repository →</a></p>
       </ul>
     </section>
     
