--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <section id="articles" class="section">
   <h2>Selected Articles</h2>
 
-  <div class="tiles tiles--two tiles--compact">
+   <div class="tiles tiles--three tiles--compact">
     <a class="tile" href="https://aerospaceamerica.aiaa.org/departments/decarbonizing-by-2050-optimists-pessimists-and-realists/" target="_blank" rel="noopener">
       <img src="./assets/articles/AA.jpg" alt="Decarbonizing by 2050 — Aerospace America">
       <div class="tile-body">
@@ -228,6 +228,16 @@
         <span class="tile-meta">Solar Impulse Foundation</span> 
       </div>
     </a>
+
+    <a class="tile" href="https://aerospaceamerica.aiaa.org/features/b-21-unveiling/" target="_blank" rel="noopener">
+      <img src="./assets/articles/B21.jpg" alt="Towards Sustainable Air Travel">
+      <div class="tile-body">
+        <h3>Analysis: B-21 unveiling</h3>
+ <!--         <p>Some deisign considerations for the upcoming B-21 bomber.</p> -->
+        <span class="tile-meta">Aerospace America</span> 
+      </div>
+    </a>
+     
   </div>
 </section>
 
