--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <a class="tile" href="https://aerospaceamerica.aiaa.org/features/b-21-unveiling/" target="_blank" rel="noopener">
       <img src="./assets/articles/B21.jpg" alt="Towards Sustainable Air Travel">
       <div class="tile-body">
-        <h3>Analysis: B-21 unveiling</h3>
+        <h3>B-21: Why civilian designers are intrigued by blended-wing-bodies too.</h3>
  <!--         <p>Some deisign considerations for the upcoming B-21 bomber.</p> -->
         <span class="tile-meta">Aerospace America</span> 
       </div>
