--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         
         <article class="card">
           <div class="card-media">
-            <img src="./assets/focus/focus1.jpg" alt="Digital twins and simulation" loading="lazy" decoding="async">
+            <img src="./assets/focus/Focus1.jpg" alt="Digital twins and simulation" loading="lazy" decoding="async">
           </div>
           <h3>Digital Twins & Simulation</h3>
           <p>From asset models to airline/airport ops simulation for strategy and decision support.</p>
@@ -94,7 +94,7 @@
 
         <article class="card">
           <div class="card-media">
-            <img src="./assets/focus/focus2.jpg" alt="Trustworthy AI" loading="lazy" decoding="async">
+            <img src="./assets/focus/Focus2.jpg" alt="Trustworthy AI" loading="lazy" decoding="async">
           </div>
           <h3>Trustworthy AI</h3>
           <p>Explainability, V&V, and governance for safe, compliant deployment in aviation.</p>
@@ -102,7 +102,7 @@
 
         <article class="card">
           <div class="card-media">
-            <img src="./assets/focus/focus3.jpg" alt="Condition-based maintenance" loading="lazy" decoding="async">
+            <img src="./assets/focus/Focus3.jpg" alt="Condition-based maintenance" loading="lazy" decoding="async">
           </div>
           <h3>PdM & Condition-Based Maintenance</h3>
           <p>Monitoring, diagnostics, RUL estimation, and workscoping that reduce disruptions and waste.</p>
